ihookup.com (archived on 2019-06-07)
{
  "alexa_rank": 508507,
  "analysis_subcorpus": true,
  "categories": "personals",
  "char_count": 22468,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.6,
  "homepage_snapshot_redirected_domain": "ihookup.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190401062656id_/http://www.ihookup.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190401062656id_/http%3A//ihookup.com",
  "interval": "2019_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "ihookup.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190607225408id_/http%3A//www.ihookup.com/main/privacy_policy",
  "policy_title": "iHookup | Casual Dating | Meet Local Singles | Hot Girls & Guys",
  "policy_url": "ihookup.com/main/privacy_policy",
  "sha1": "5ea2bb09eea5907bc855a48d9b82264646ae105f",
  "simhash": 5520060907579879880,
  "simhash_updated": false,
  "site_hostname": "ihookup.com",
  "site_url": "http://ihookup.com",
  "smog": 16.65,
  "strict_updated": true,
  "timestamp": "20190607225408",
  "word_count": 3584,
  "year": 2019
}

--- a/i/ih/iho/ihookup.com.html
+++ b/i/ih/iho/ihookup.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ihookup.com privacy policy that was archived on 2018-11-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181118111633id_/http%3A//www.ihookup.com/main/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ihookup.com privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607225408id_/http%3A//www.ihookup.com/main/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class="no-js"><!--<![endif]--><head>
   <meta charset="utf-8">
@@ -11,7 +11,8 @@
   <link rel="apple-touch-icon" href="http://cdn2.static.cdn-ihookup.com/images/desktop/iPhone.png">
   <link rel="apple-touch-icon" sizes="114x114" href="http://cdn2.static.cdn-ihookup.com/images/desktop/iPhone4.png">
   <title>iHookup | Casual Dating | Meet Local Singles | Hot Girls &amp; Guys</title>
-  <link href="http://cdn2.static.cdn-ihookup.com/css/desktop/screen.3216627829.css" rel="stylesheet" type="text/css">  <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="http://cdn2.static.cdn-ihookup.com/js/desktop/lib/modernizr.custom.496909989.js"></script>  
+  <link href="http://cdn2.static.cdn-ihookup.com/css/desktop/screen.3216627829.css" rel="stylesheet" type="text/css">  <script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript"> var exit_iframe = 0; </script>
+  <script src="http://cdn2.static.cdn-ihookup.com/js/desktop/iframepopout/exit_iframe.378390424.js"></script>  <script src="http://cdn2.static.cdn-ihookup.com/js/desktop/lib/modernizr.custom.496909989.js"></script>  
 <script>
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -330,7 +331,7 @@
             <li class="footer-list-item">
         <a class="footer-list-item-link" href="http://www.ihookup.com/main/usc2257?link_id=76">2257 Exemption Notice</a>
       </li>
-      <li class="footer-list-item"> © Copyright iHookup 2018 </li>
+      <li class="footer-list-item"> © Copyright iHookup 2019 </li>
     </ul>
   </div>
 </footer>
@@ -344,7 +345,7 @@
 (function() {
   function loadTMX() {
     var frame = document.createElement('iframe');
-    frame.src    = 'https://h.online-metrix.net/tags?org_id=cd7qw1ng&session_id=lf6t8tjlatteqpgr93r1t7lat2';
+    frame.src    = 'https://h.online-metrix.net/tags?org_id=cd7qw1ng&session_id=jekg3b8urrkj6vo5v47iq1pk63';
     frame.height = 100;
     frame.width  = 100;
     frame.style.cssText = 'color:rgb(0,0,0); float:left; position:absolute; left:-9999em; border:0px';
@@ -360,9 +361,18 @@
 </script>
 
 <noscript>
-  <iframe style="color:rgb(0,0,0); float:left; position:absolute; left:-9999em; border:0px" src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=lf6t8tjlatteqpgr93r1t7lat2" height="100" width="100"></iframe>
+  <iframe style="color:rgb(0,0,0); float:left; position:absolute; left:-9999em; border:0px" src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=jekg3b8urrkj6vo5v47iq1pk63" height="100" width="100"></iframe>
 </noscript>
 
-      <script src="http://cdn2.static.cdn-ihookup.com/js/desktop/core.1934546088.js"></script>  
+      <script src="http://cdn2.static.cdn-ihookup.com/js/desktop/core.1934546088.js"></script>        <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
+    <script>
+        var OneSignal = window.OneSignal || [];
+        OneSignal.push(function() {
+            OneSignal.init({
+                appId: "3634bc76-2c5a-4430-bbdf-39494a34598b",
+            });
+        });
+    </script>
 
-<iframe src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=lf6t8tjlatteqpgr93r1t7lat2" height="100" width="100" style="color: rgb(0, 0, 0); float: left; position: absolute; left: -9999em; border: 0px;"></iframe></body></html>
+
+<iframe src="https://h.online-metrix.net/tags?org_id=cd7qw1ng&amp;session_id=jekg3b8urrkj6vo5v47iq1pk63" height="100" width="100" style="color: rgb(0, 0, 0); float: left; position: absolute; left: -9999em; border: 0px;"></iframe></body></html>
