--- a/t/tv/tva/tva.gov.html
+++ b/t/tv/tva/tva.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tva.gov privacy policy that was archived on 2018-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181225194813id_/https%3A//www.tva.com/Information/TVA-Privacy-Policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tva.gov privacy policy that was archived on 2019-06-07.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190607234720id_/https%3A//www.tva.com/Information/TVA-Privacy-Policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
     <!-- set the encoding of your site -->
@@ -13,11 +13,10 @@
     <title>TVA - TVA Privacy Policy</title>
 
     <link href="/sites/styles/vgn-ext-templating-delivery.css" rel="stylesheet" type="text/css">
-<script src="/LiveInsights/static/rtb/script/rtbwsa-livesite.js" id="rtb_livesite_elem"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://d39se0h2uvfakd.cloudfront.net/js/tva2.js"></script><script language="JavaScript" src="/file_source/TVA/Lookup/custom_scripts/contentwrx-tva-v2.js" type="text/javascript"></script>
-    <link href="/file_source/TVA/Lookup/custom_css/tva_custom.css" rel="stylesheet" type="text/css">
+<link href="/file_source/TVA/Lookup/custom_css/tva_custom.css" rel="stylesheet" type="text/css">
     <link href="/tvasites/tva/css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="/file_source/TVA/Lookup/custom_css/all.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="/sites/scripts/async/ajax.jsp"></script><script type="text/javascript" src="/sites/scripts/vquery/vquery.min.js"></script><script type="text/javascript" src="/sites/scripts/async/ajaxlib.js"></script><script type="text/javascript" src="/sites/scripts/async/wem-ajax-min.js"></script><script type="text/javascript" src="/sites/scripts/messaging/wem-messaging-min.js"></script><script type="text/javascript" src="/sites/scripts/vcm32266.js"></script>
+    <script src="/LiveInsights/static/rtb/script/rtbwsa-livesite.js" id="rtb_livesite_elem"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" src="/sites/scripts/async/ajax.jsp"></script><script type="text/javascript" src="/sites/scripts/vquery/vquery.min.js"></script><script type="text/javascript" src="/sites/scripts/async/ajaxlib.js"></script><script type="text/javascript" src="/sites/scripts/async/wem-ajax-min.js"></script><script type="text/javascript" src="/sites/scripts/messaging/wem-messaging-min.js"></script><script type="text/javascript" src="/sites/scripts/vcm32266.js"></script>
 <!-- include roboto fonts -->
     <link href="//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,400italic" rel="stylesheet" type="text/css">
     <!-- include HTML5 IE enabling script and stylesheet for IE -->
@@ -45,6 +44,25 @@
                 window.addEventListener('load', async_load, false);
         })();
     </script>
+
+	<!-- Facebook Pixel Code -->
+	<script>
+	  !function(f,b,e,v,n,t,s)
+	  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+	  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+	  n.queue=[];t=b.createElement(e);t.async=!0;
+	  t.src=v;s=b.getElementsByTagName(e)[0];
+	  s.parentNode.insertBefore(t,s)}(window, document,'script',
+	  'https://connect.facebook.net/en_US/fbevents.js');
+	  fbq('init', '377213022678614');
+	  fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+	  src="https://www.facebook.com/tr?id=377213022678614&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
+
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -372,6 +390,7 @@
             <li><a href="https://www.tva.com/Careers">Careers</a></li>
             <li><a href="https://www.tva.com/About-TVA">About</a></li>
             <li><a href="https://www.snl.com/IRW/CorporateProfile/4063363">Investor Relations</a></li>
+            <li><a href="/Energy/Transmission-System/Staying-Safe-Around-Transmission-Lines-and-Equipment">Safety</a></li>
             </ul>
 </nav>
 
@@ -456,4 +475,4 @@
     </script>
 
 
-<iframe id="font-resize-frame-56" class="font-resize-helper" style="width: 100em; height: 10px; position: absolute; border-width: 0px; top: -9999px; left: -9999px;"></iframe><iframe src="/collector/client//rtb.jsp" style="width: 0px; height: 0px; border: 0px;"></iframe></body></html>
+<iframe id="font-resize-frame-556" class="font-resize-helper" style="width: 100em; height: 10px; position: absolute; border-width: 0px; top: -9999px; left: -9999px;"></iframe><iframe src="/collector/client//rtb.jsp" style="width: 0px; height: 0px; border: 0px;"></iframe></body></html>
