--- a/u/up/upm/upmyrank.com.html
+++ b/u/up/upm/upmyrank.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the upmyrank.com privacy policy that was archived on 2018-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181205233935id_/http%3A//upmyrank.com/privacypolicy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the upmyrank.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608001807id_/http%3A//www.upmyrank.com/privacypolicy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 
