fitclick.com (archived on 2019-06-08)
{
  "alexa_rank": 726104,
  "analysis_subcorpus": true,
  "categories": "education;health",
  "char_count": 21126,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 16.12,
  "homepage_snapshot_redirected_domain": "fitclick.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190222171251id_/http://www.fitclick.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190222171251id_/http%3A//fitclick.com",
  "interval": "2019_A",
  "link_text": "privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "fitclick.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190608001814id_/http%3A//www.fitclick.com/www/misc/Privacy.aspx",
  "policy_title": "Privacy policy | FitClick",
  "policy_url": "fitclick.com/www/misc/Privacy.aspx",
  "sha1": "48829acc1f1fb64f5dc1eb767d18333b3333a08f",
  "simhash": 14979368672955277385,
  "simhash_updated": false,
  "site_hostname": "fitclick.com",
  "site_url": "http://fitclick.com",
  "smog": 17.28,
  "strict_updated": false,
  "timestamp": "20190608001814",
  "word_count": 3349,
  "year": 2019
}

--- a/f/fi/fit/fitclick.com.html
+++ b/f/fi/fit/fitclick.com.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the fitclick.com privacy policy that was archived on 2018-08-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180823135117id_/http%3A//www.fitclick.com/www/misc/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fitclick.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608001814id_/http%3A//www.fitclick.com/www/misc/Privacy.aspx) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class=" js no-mobile desktop no-ie web-section web-20180823135117id_-section web-20180823135117id_-http%3a-section web-20180823135117id_-http%3a--section web-20180823135117id_-http%3a--www.fitclick.com-section web-20180823135117id_-http%3a--www.fitclick.com-www-section web-20180823135117id_-http%3a--www.fitclick.com-www-misc-section w-1366 gt-240 gt-320 gt-480 gt-640 gt-768 gt-800 gt-1024 gt-1280 lt-1440 lt-1680 lt-1920 no-portrait landscape gradient rgba opacity textshadow multiplebgs boxshadow borderimage borderradius cssreflections csstransforms csstransitions no-touch no-retina fontface domloaded" id="privacy-page"><head><link rel="stylesheet" type="text/css" href="/www/tf/styles/baAch/Styles.css">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" class=" js no-mobile desktop no-ie web-section web-20190608001814id_-section web-20190608001814id_-http%3a-section web-20190608001814id_-http%3a--section web-20190608001814id_-http%3a--www.fitclick.com-section web-20190608001814id_-http%3a--www.fitclick.com-www-section web-20190608001814id_-http%3a--www.fitclick.com-www-misc-section w-1366 gt-240 gt-320 gt-480 gt-640 gt-768 gt-800 gt-1024 gt-1280 lt-1440 lt-1680 lt-1920 no-portrait landscape gradient rgba opacity textshadow multiplebgs boxshadow borderimage borderradius cssreflections csstransforms csstransitions no-touch no-retina fontface domloaded" id="privacy-page"><head><link rel="stylesheet" type="text/css" href="/www/tf/styles/baAch/Styles.css">
 <title>
 	Privacy policy | FitClick
 </title><link rel="shortcut icon" href="/img/tf/icons/favicon.ico?c=4">
@@ -24,7 +24,7 @@ googletag.cmd.push(function(){
 googletag.defineSlot('/4119227/FitClick_Run-of-Site_Med_Rect_Top_Right',[300,250],'ad1_uxGooglePublisherTag_uxAd').addService(googletag.pubads());
 googletag.defineSlot('/4119227/FitClick_Run_of_Site_Top_Leaderboard',[728,90],'ctl03_ctl03_uxGooglePublisherTag_uxAd').addService(googletag.pubads());
 googletag.defineSlot('/4119227/FitClick_Run_of_Site_Bottom_Leaderboard',[728,90],'ctl07_uxExplorePanel_ctl00_uxGooglePublisherTag_uxAd').addService(googletag.pubads());
-googletag.pubads().set('page_url', 'http://fitclick.com/www/misc/Privacy.aspx');
+googletag.pubads().set('page_url', 'http://www.fitclick.com/www/misc/Privacy.aspx');
 googletag.enableServices();
 });
 function googletagPeriodicRefresh(googletag){
@@ -558,7 +558,7 @@ head.js({'jquery':'https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min
 					<a class="ui-list-item" href="/www/misc/AdvertiseOn.aspx">Advertise on FitClick</a>
 				</div>
       </div>
-      <p id="FooterCopyright"><br>Copyright ï¿½ 2018 Genesant Technologies, Inc. Use of this site constitutes acceptance of our <a href="/www/misc/Terms.aspx" rel="nofollow">terms and conditions</a> and <a id="link-terms2" href="/www/misc/Privacy.aspx" rel="nofollow">privacy policy</a>. The content provided on FitClick.com is provided for informational purposes only and is not intended in any way to be a substitute for professional medical advice, diagnosis or treatment.</p>
+      <p id="FooterCopyright"><br>Copyright ï¿½ 2019 Genesant Technologies, Inc. Use of this site constitutes acceptance of our <a href="/www/misc/Terms.aspx" rel="nofollow">terms and conditions</a> and <a id="link-terms2" href="/www/misc/Privacy.aspx" rel="nofollow">privacy policy</a>. The content provided on FitClick.com is provided for informational purposes only and is not intended in any way to be a substitute for professional medical advice, diagnosis or treatment.</p>
     </div>
   </div>
 	
