--- a/a/an/ann/ann-angel.com.html
+++ b/a/an/ann/ann-angel.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ann-angel.com privacy policy that was archived on 2018-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181206094219id_/http%3A//ann-angel.com/wp/%3Fpage_id%3D1026) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ann-angel.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608002652id_/http%3A//ann-angel.com/wp/%3Fpage_id%3D1026) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-US"><!--<![endif]--><head>
 	<title>PRIVACY POLICY/ 2257 / REFUND POLICY  |  Ann Angel Sexy cam girl and pornstar hottie goes hardcore</title>
@@ -387,7 +387,7 @@ Refunds are provided upon request.</p>
 </ul>                    </nav>
                             
                 <div id="footer-text">
-                                                                copyright 2015 www.Ann-Angel.com (AAsvc)                                    </div>
+                                                                copyright 2019 www.Ann-Angel.com                                     </div>
             
             </div>
         </div>
