--- a/a/af/aff/affbuzz.com.html
+++ b/a/af/aff/affbuzz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the affbuzz.com privacy policy that was archived on 2018-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180616201755id_/http%3A//www.affbuzz.com/page/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the affbuzz.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608015528id_/http%3A//www.affbuzz.com/page/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 
@@ -60,7 +60,7 @@
 				var abkw = window.abkw || '';
 				var absrc = 'http://ab161318.adbutler-photon.com/adserve/;ID=161318;size=468x60;setID=157136;type=js;kw='+abkw+';pid='+pid157136+';place='+(plc157136++)+';rnd='+rnd+'';
 				document.write('<scr'+'ipt src="'+absrc+'" type="text/javascript"></scr'+'ipt>');
-			</script><script src="http://ab161318.adbutler-photon.com/adserve/;ID=161318;size=468x60;setID=157136;type=js;kw=;pid=1351187;place=0;rnd=1351187" type="text/javascript"></script>
+			</script><script src="http://ab161318.adbutler-photon.com/adserve/;ID=161318;size=468x60;setID=157136;type=js;kw=;pid=375053;place=0;rnd=375053" type="text/javascript"></script>
     	</div>
     </div>
     <div class="top_menu">	
