--- a/w/wi/wic/wicked.com.html
+++ b/w/wi/wic/wicked.com.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the wicked.com privacy policy that was archived on 2018-12-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181203024555id_/http%3A//www.wickedpictures.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wicked.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608031522id_/http%3A//www.wickedpictures.com/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 	<meta charset="utf-8">
 	<title>Privacy Policy</title>
+	<meta name="ROBOTS" content="NOINDEX, NOFOLLOW">
 </head>
 <body>
 
