--- a/t/te/tel/teleseminarsecrets.com.html
+++ b/t/te/tel/teleseminarsecrets.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the teleseminarsecrets.com privacy policy that was archived on 2018-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181205002714id_/http%3A//alexmandossian.com/am/%3Fcontent%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the teleseminarsecrets.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608044245id_/http%3A//alexmandossian.com/am/%3Fcontent%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-</head><body><br>
+<meta name="description" content="Alex Mandossian has generated over $233 million in sales and profits for his clients and partners since 1991 via electronic marketing media such as TV Infomercials, online catalogs, 24-hour recorded messages, voice/fax broadcasting, Teleseminars, Webinars, Podcasts and Internet Marketing.">	<meta name="keywords" content="Alex Mandossian, internet marketing, marketing, info marketing, teleseminar, teleseminars, telewebcast, webinars, tele-webcast, teleseminar secrets, virtual book tour secrets, heritage house publishing, authorpedia, conversion strategy">
 <title>Alex Mandossian -Privacy Policy</title>
-<br>
+<style type="text/css">h1.alex20070621 { display:none; } p.alex20070621  { font-size: 11px; line-height: 13px; } table.alex20070621 { background: #e8e8e8; border: 1px solid #CCCCCC; font-size: 10px; line-height: 12px; font-family: Arial; } table.alex20070621 a, table.alex20070621 a:link, table.alex20070621 a:visited { text-decoration: underline; font-weight: normal; color: #666666; margin: 15px; font-size: 10px; line-height: 12px; font-family: Arial; } table.alex20070621 a:hover, table.alex20070621 a:active { color: #666666; } table.alex20070621 p { text-decoration: none; color: #666666; margin: 4px; font-size: 10px; line-height: 12px; font-family: Arial; }</style>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
-
-
+</head>
+<body>
 <table width="770" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td><div id="content"><h1 align="center"><u>PRIVACY POLICY</u></h1>
@@ -67,7 +67,7 @@
 </div></td>
   </tr><tr>
 </tr></tbody></table>
-<meta name="description" content="Alex Mandossian has generated over $233 million in sales and profits for his clients and partners since 1991 via electronic marketing media such as TV Infomercials, online catalogs, 24-hour recorded messages, voice/fax broadcasting, Teleseminars, Webinars, Podcasts and Internet Marketing.">	<meta name="keywords" content="Alex Mandossian, internet marketing, marketing, info marketing, teleseminar, teleseminars, telewebcast, webinars, tele-webcast, teleseminar secrets, virtual book tour secrets, heritage house publishing, authorpedia, conversion strategy">
+<table width="600" align="center" cellpadding="2" cellspacing="0" class="alex20070621"><tbody><tr><td align="center"><a href="http://alexmandossian.com/am/?content=terms" target="_blank">Terms of Use</a>|<a href="http://alexmandossian.com/am/?content=privacy" target="_blank">Privacy Policy</a>|<a href="http://alexmandossian.com/am/?content=earnings" target="_blank">Earnings Policy</a><p>© 2019 Heritage House Publishing, Inc.<u></u> All Rights Reserved.</p></td></tr></tbody></table>
 
   
  
