--- a/r/ra/rap/raptmedia.com.html
+++ b/r/ra/rap/raptmedia.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the raptmedia.com privacy policy that was archived on 2018-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181231045249id_/http%3A//www.raptmedia.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the raptmedia.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608045357id_/http%3A//www.raptmedia.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class="enhanced"><head>
   <meta charset="utf-8">
@@ -34,7 +34,7 @@
 <!-- End Jekyll SEO tag -->
 </head>
 
-<body class="brand-rose">
+<body class="brand-red">
 <input id="menu-toggle" type="checkbox">
 <div id="privacy" class="wrapper">
     <main>
