--- a/b/ba/bad/badtushy.com.html
+++ b/b/ba/bad/badtushy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the badtushy.com privacy policy that was archived on 2018-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181201042104id_/http%3A//badtushy.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the badtushy.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608063459id_/http%3A//www.badtushy.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>BadTushy.com Unique Tushy Action, Ass Play, Hot Asses, Nice Butts, Ass 
