--- a/f/fo/foo/foothill.edu.html
+++ b/f/fo/foo/foothill.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the foothill.edu privacy policy that was archived on 2018-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180629025733id_/https%3A//foothill.edu/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the foothill.edu privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608064207id_/https%3A//foothill.edu/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
       <title>Privacy Policy</title>
@@ -99,71 +99,71 @@
 					var page_url="https://foothill.edu/about/privacy.html";
 				</script></head>
    <body class="generic_inner fold-out"><a tabindex="0" class="skip" href="#main-content"> Skip to Main Content </a><header>
-<div class="l-head">
-<div class="mobi-toggle-wrapper">
-<div class="toggle" tabindex="0">
-<div class="toggle-element"></div>
-</div>
-</div>
-<div class="mobi-toggle-container">
-<div class="utility">
-<div class="container">
-<div id="search-appender" class="search"><form action="https://fhsearch.foothill.edu/search"><input type="hidden" value="foothill" name="site"><input type="hidden" value="foothill" name="client"><input type="hidden" value="foothill" name="proxystylesheet"><input type="hidden" value="xml_no_dtd" name="output"><label class="sr-only" for="as_q">Search</label><input id="as_q" class="search" title="search" type="text" name="q" aria-label="search"><button id="site_search_button" aria-label="submit site search"></button></form></div>
-<div class="drop-container utility-menu mobile">
-<div id="utility-appender" class="drop-item">
-<ul>
-<li><a title="View important academic dates and deadlines." href="/calendar/">Calendar</a></li>
-<li><a href="/news/">News</a></li>
-<li><a href="/events/">Events</a></li>
-<li><a href="/directory/">Directory</a></li>
-<li><a href="/library/">Library</a></li>
-<li><a href="http://books.foothill.edu/home.aspx">Bookstore</a></li>
-<li><a href="/map/">Map</a></li>
-<li><a href="https://myportal.fhda.edu/cp/home/displaylogin">MyPortal</a></li>
-<li><a href="/schedule/">Class Schedule</a></li>
-<li><a href="/onlinelearning/">Online Learning</a></li>
-</ul>
-</div>
-</div>
-<div id="gateway-appender" class="drop-container gateway-menu mobile"><button class="drop-toggle">Info for</button>
-<div class="drop-item">
-<ul>
-<li><a title="International Student Program Gateway" href="/international/">International Students</a></li>
-<li><a href="/current/">Current Students</a></li>
-<li><a href="/transfergw/">Transfer Students</a></li>
-<li><a href="/veterans/">Military &amp; Veterans</a></li>
-<li><a href="/drc/">Students with Disabilities</a></li>
-<li><a href="/fac-staff/">Faculty &amp; Staff</a></li>
-<li><a href="/community/">Community</a></li>
-<li><a href="https://foundation.fhda.edu/">Giving</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-<div class="main-nav-container wrapper">
-<div class="container">
-<div class="row">
-<div class="col-xs-12"><a class="site-logo" href="/"><img src="/_resources/images/logo.png" alt="Site Logo"></a>
-<div class="nav-wrapper">
-<div class="b-column"><a class="desk-sticky" href="/"><img src="/_resources/images/logo.png" alt="Foothill College Logo"></a>
-<ul class="main-nav">
-<li id="nav-0" class="nav"><a href="/about/">About Us</a></li>
-<li id="nav-1" class="nav"><a href="/programs/">Programs &amp; Courses</a></li>
-<li id="nav-2" class="nav active"><a href="/reg/">Apply &amp; Register</a></li>
-<li id="nav-3" class="nav"><a href="/cost-fa/">Costs &amp; Financial Aid</a></li>
-<li id="nav-4" class="nav"><a href="/services/">Student Services</a></li>
-<li id="nav-5" class="nav"><a href="/studentlife/">Athletics&nbsp;&amp; Campus Resources</a></li>
-<li id="nav-6" class="nav"><a href="/sunnyvale/">Sunnyvale Center</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
-</div>
+   <div class="l-head">
+      <div class="mobi-toggle-wrapper">
+         <div tabindex="0" class="toggle">
+            <div class="toggle-element"></div>
+         </div>
+      </div>
+      <div class="mobi-toggle-container">
+         <div class="utility">
+            <div class="container">
+               <div class="search" id="search-appender">
+                  <form action="https://fhsearch.foothill.edu/search"><input name="site" value="foothill" type="hidden"><input name="client" value="foothill" type="hidden"><input name="proxystylesheet" value="foothill" type="hidden"><input name="output" value="xml_no_dtd" type="hidden"><label for="as_q" class="sr-only">Search</label><input title="search" aria-label="search" id="as_q" class="search" type="text" name="q"><button id="site_search_button" type="submit" name="sa" value="" aria-label="submit site search"><span class="fa fa-search"></span></button></form>
+               </div>
+               <div class="drop-container utility-menu mobile">
+                  <div class="drop-item" id="utility-appender">
+                     <ul>
+                        <li><a title="View important academic dates and deadlines." href="/calendar/">Calendar</a></li>
+                        <li><a title="Schedule of Classes" href="/schedule/">Class Schedule</a></li>
+                        <li><a title="Find faculty and staff; A-Z Index" href="/directory/">Directory</a></li>
+                        <li><a href="/library/">Library</a></li>
+                        <li><a href="http://books.foothill.edu/home.aspx">Bookstore</a></li>
+                        <li><a href="/map/">Map</a></li>
+                        <li><a href="/news/">News</a></li>
+                        <li><a href="/sunnyvale/">Sunnyvale Center</a></li>
+                        <li><a href="/onlinelearning/">Online Learning</a></li>
+                        <li><a href="https://myportal.fhda.edu/">MyPortal</a></li>
+                     </ul>
+                  </div>
+               </div>
+               <div class="drop-container gateway-menu mobile" id="gateway-appender"><button class="drop-toggle">Info for</button><div class="drop-item">
+                     <ul>
+                        <li><a title="International Student Program Gateway" href="/international/">International Students</a></li>
+                        <li><a href="/current/">Current Students</a></li>
+                        <li><a href="/transfergw/">Transfer Students</a></li>
+                        <li><a href="/veterans/">Military &amp; Veterans</a></li>
+                        <li><a href="http://foothillowls.com" target="_blank">Student Athletes</a></li>
+                        <li><a href="/drc/">Students with Disabilities</a></li>
+                        <li><a href="/fac-staff/">Faculty &amp; Staff</a></li>
+                        <li><a href="/community/">Community</a></li>
+                        <li><a href="https://foundation.fhda.edu/">Giving</a></li>
+                     </ul>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <div class="main-nav-container wrapper">
+            <div class="container">
+               <div class="row">
+                  <div class="col-xs-12"><a class="site-logo" href="/"><img src="/_resources/images/logo.png" alt="Site Logo"></a><div class="nav-wrapper">
+                        <div class="b-column"><a class="desk-sticky" href="/"><img alt="Foothill College Logo" src="/_resources/images/logo.png"></a><ul class="main-nav">
+                              <li id="nav-0" class="nav"><a href="/about/">About Us</a></li>
+                              <li id="nav-1" class="nav"><a href="/programs/">Programs &amp; Courses</a></li>
+                              <li id="nav-2" class="nav active"><a href="/reg/">Apply &amp; Register</a></li>
+                              <li id="nav-3" class="nav"><a href="/cost-fa/">Costs &amp; Financial Aid</a></li>
+                              <li id="nav-4" class="nav"><a href="/services/">Counseling &amp; Student Services</a></li>
+                              <li id="nav-5" class="nav"><a href="/studentlife">Athletics &amp; Campus Life</a></li>
+                              <li id="nav-6" class="nav"><a href="/international/">International Students</a></li>
+                           </ul>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 </header><div class="l-page" id="main-content" tabindex="-1">
          <div class="container-fluid sub-header-bg sub-header-gradient"><img alt="Fountain at dusk" src="/about/images/about_1300.jpg"><div class="container">
                <div class="row">
@@ -189,8 +189,9 @@
                      </div>
                   </div>
                   <div class="subnav toggles" id="subnav">
-                     <p tabindex="0">About Us</p><ul class="level-1"><li><a href="/about/facts.html">Fast Facts</a></li>
-<li><a href="/about/tours.html">Campus Tours</a></li>
+                     <p tabindex="0">About Us</p><ul class="level-1"><li><a href="/about/tours.html">Campus Tours</a></li>
+<li><a href="/about/facts.html">Fast Facts</a></li>
+<li><a href="/about/history.html">Foothill College History</a></li>
 <li><a href="/about/privacy.html">Privacy Policy</a></li>
 </ul>                  </div>
                </div>
@@ -279,13 +280,14 @@
          <ul>
             <li><a href="/map/">Maps &amp; Locations</a></li>
             <li><a href="/sunnyvale/">Sunnyvale Center</a></li>
-            <li><a href="/accreditation/">Accreditation</a></li>
-            <li><a title="Visit the Foothill-De Anza Community College District" href="https://www.fhda.edu/">Foothill-De Anza District</a></li>
+            <li><a href="http://books.foothill.edu/home.aspx">Bookstore</a></li>
+            <li><a href="/directory/">Directory</a></li>
+            <li><a href="/directory/site.html">A-Z Index</a></li>
          </ul>
          <h4>Student Resources</h4>
          <ul>
             <li><a href="http://scorecard.cccco.edu/scorecardrates.aspx?CollegeID=422" target="_blank">Student Success Scorecard</a></li>
-            <li><a href="https://foothill.intelliresponse.com/students/">Ask Foothill</a></li>
+            <li><a href="/ask-foothill/">Ask Foothill</a></li>
          </ul>
       </div>
       <div class="col-xs-6 col-sm-4 col-lg-3">
@@ -293,13 +295,14 @@
          <ul>
             <li><a title="Be Prepared in Case of an Emergency" href="/emergency/" target="_blank">Campus Police &amp; Emergency Information</a></li>
             <li><a href="/titleix/">Sexual Assault &amp; Discrimination Title IX</a></li>
-            <li><a href="https://foundation.fhda.edu/" target="_blank">Giving/Foundation</a></li>
+            <li><a href="/titleix/clery.html">Clery/Crime Statistics</a></li>
          </ul>
-         <h4>Other</h4>
+         <h4>Contact</h4>
          <ul>
-            <li><a href="http://books.foothill.edu/home.aspx">Bookstore</a></li>
-            <li><a href="/employment/">Employment</a></li>
-            <li><a href="/directory/site.html">A-Z Index</a></li>
+            <li><a href="/directory/contact.html">Contact Us</a></li>
+            <li><a href="/web-support/">Feedback</a></li>
+            <li><a href="/marketing/accessibility.html">Accessibility</a></li>
+            <li><a href="/handbook/discriminationprotection.html">Nondiscrimination Policy</a></li>
          </ul>
       </div>
       <div class="col-xs-12 col-sm-5 col-lg-4 social-links">
@@ -314,9 +317,11 @@
             </ul>
          </div>
          <ul>
-            <li><a href="/directory/contact.html">Contact Us</a></li>
-            <li><a href="/web-support/">Feedback</a></li>
-            <li><a href="/directory/">Directory</a></li>
+            <li><a href="https://krauseinnovationcenter.org/" target="_blank">Krause Center for Innovation (KCI)</a></li>
+            <li><a title="Visit the Foothill-De Anza Community College District" href="https://www.fhda.edu/" target="_blank">Foothill-De Anza District</a></li>
+            <li><a title="Foothill-De Anza Community College District Board of Trustees" href="https://www.fhda.edu/_about-us/_board/index.html" target="_blank">FHDA Board of Trustees Agendas/Minutes</a></li>
+            <li><a href="https://foundation.fhda.edu/" target="_blank">Giving/Foundation</a></li>
+            <li><a href="/employment/">Employment</a></li>
          </ul>
       </div>
    </div>
@@ -358,7 +363,14 @@
 <script type="text/javascript" src="/_resources/js/bootstrap-tab.js">
 </script>
 <script>
-	$(function() {  	$( "#faq" ).accordion({  		heightStyle: "content"  	});  });  	
+	
+	$(function() {  	$( "#faq" ).accordion({  collapsible : true, active : 'none', heightStyle: "content"  	});  }); 
+	
+	$(function() {  	$( "#faqnum" ).accordion({  collapsible : true, active : 'none', heightStyle: "content"  	});  });
+	
+	$(function() { 		$( "#faqnum" ).addClass("numbered");  });
+	
+	
 </script>
 <script src="/_resources/js/direct-edit.js"></script>
 <script type="text/javascript" src="/_resources/js/ou.js"></script><!-- Insert google analytics here -->
