--- a/c/ci/cin/cinema.com.html
+++ b/c/ci/cin/cinema.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cinema.com privacy policy that was archived on 2018-12-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181206095322id_/http%3A//www.cinema.com/legal/privacy.phtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cinema.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608094722id_/http%3A//www.cinema.com/legal/privacy.phtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -46,7 +46,7 @@
 <area href="/news/" alt="News" title="News" coords="200,10,260,70" shape="rect" border="1">
 <area href="/film/gallery/" alt="Galleries" title="Galleries" coords="265,10,325,70" shape="rect" border="1">
 <area href="/film/trailers/" alt="Trailers" title="Trailers" coords="330,10,390,70" shape="rect" border="1">
-<area href="/news/archive/thursday-6th-december-2018.phtml" alt="On This Day" title="On This Day" coords="395,10,455,70" shape="rect" border="1">
+<area href="/news/archive/saturday-8th-june-2019.phtml" alt="On This Day" title="On This Day" coords="395,10,455,70" shape="rect" border="1">
 <area href="/interviews/" alt="Interviews" title="Interviews" coords="460,10,520,70" shape="rect" border="1">
 <area href="/film/features/" alt="Features" title="Features" coords="525,10,585,70" shape="rect" border="1">
 <area href="/video_player/" alt="Video Player" title="Video Player" coords="590,10,650,70" shape="rect" border="1">
@@ -63,7 +63,7 @@
    <td class="nav">
      <div id="navbar">
       
-<a href="http://twitter.com/CinemaBod"><img src="/images/twitterLogo.png" alt="Twitter" title="Follow Cinema.Com on Twitter" width="63" height="61"></a><div id="navbarboxoffice"><a href="/film/15125/ralph-breaks-the-internet-wreck-it-ralph-2/" title="Ralph Breaks the Internet: Wreck-It Ralph 2"><img alt="Ralph Breaks the Internet: Wreck-It Ralph 2" src="/image_lib/15125_fp_side.jpg" width="108" height="85"></a><ul><li><a href="/film/15125/ralph-breaks-the-internet-wreck-it-ralph-2/" title="Ralph Breaks the Internet: Wreck-It Ralph 2">Ralph Breaks the Internet: Wreck-It Ralph 2</a></li><li><a href="/film/15285/creed-ii/" title="Creed II">Creed II</a></li><li><a href="/film/15134/grinch/" title="Grinch, The">Grinch, The</a></li></ul><a href="/film/boxoffice.phtml"><img src="/images/fp_bluemore.gif" alt="More" title="More" width="144" height="17"></a></div><br>
+<a href="http://twitter.com/CinemaBod"><img src="/images/twitterLogo.png" alt="Twitter" title="Follow Cinema.Com on Twitter" width="63" height="61"></a><div id="navbarboxoffice"><a href="/film/15316/godzilla-king-of-the-monsters/" title="Godzilla: King of the Monsters"><img alt="Godzilla: King of the Monsters" src="/image_lib/15316_fp_side.jpg" width="108" height="85"></a><ul><li><a href="/film/15316/godzilla-king-of-the-monsters/" title="Godzilla: King of the Monsters">Godzilla: King of the Monsters</a></li><li><a href="/film/15456/aladdin/" title="Aladdin">Aladdin</a></li><li><a href="/film/15429/rocketman/" title="Rocketman">Rocketman</a></li></ul><a href="/film/boxoffice.phtml"><img src="/images/fp_bluemore.gif" alt="More" title="More" width="144" height="17"></a></div><br>
 <script type="text/javascript"><!--
 google_ad_client = "pub-5737888033979348";
 google_ad_width = 120;
@@ -80,7 +80,7 @@ google_color_url = "00ff00";
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
 <br>&nbsp;<br>
 
-<div id="navbarusthisweek"><ul><li><a href="/film/15459/possession-of-hannah-grace/">Possession of Hannah Grace, The</a></li></ul><a href="/film/usreleases.phtml"><img src="/images/fp_bluemore.gif" alt="More" title="More" width="144" height="13"></a></div><div id="navbarukthisweek"><ul><li><a href="/film/15125/ralph-breaks-the-internet-wreck-it-ralph-2/">Ralph Breaks the Internet: Wreck-It Ralph 2</a></li><li><a href="/film/15285/creed-ii/">Creed II</a></li></ul><a href="/film/ukreleases.phtml"><img src="/images/fp_bluemore.gif" alt="More" title="More" width="144" height="17"></a></div><a href="/competition/"><img src="/images/front_page_comp.gif" alt="Enter Competition" width="144" height="183"></a>
+<div id="navbarusthisweek"><ul><li><a href="/film/15426/x-men-dark-phoenix/">X-Men: Dark Phoenix</a></li><li><a href="/film/15500/secret-life-of-pets-2/">Secret Life of Pets 2, The</a></li></ul><a href="/film/usreleases.phtml"><img src="/images/fp_bluemore.gif" alt="More" title="More" width="144" height="13"></a></div><div id="navbarukthisweek"><ul><li><a href="/film/15514/gloria-bell/">Gloria Bell</a></li><li><a href="/film/15426/x-men-dark-phoenix/">X-Men: Dark Phoenix</a></li><li><a href="/film/15683/late-night/">Late Night</a></li></ul><a href="/film/ukreleases.phtml"><img src="/images/fp_bluemore.gif" alt="More" title="More" width="144" height="17"></a></div><a href="/competition/"><img src="/images/front_page_comp.gif" alt="Enter Competition" width="144" height="183"></a>
 
 <br>&nbsp;<br>
 <script type="text/javascript"><!--
@@ -166,7 +166,7 @@ google_color_url = "00ff00";
 <a href="/legal/about.phtml">Press</a>
 </p>
 <p>
-© 1999 - 2018 Cinema.com</p>
+© 1999 - 2019 Cinema.com</p>
 </div>
  </div>
 </div>
