--- a/b/bl/bla/blazonry.com.html
+++ b/b/bl/bla/blazonry.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the blazonry.com privacy policy that was archived on 2018-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181212183105id_/http%3A//www.blazonry.com/privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blazonry.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608100449id_/http%3A//www.blazonry.com/privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
     <title>Privacy Policy for blazonry.com - web.blazonry</title>
@@ -39,7 +39,7 @@
 
 
 <td align="middle">
-	<b><a href="http://www.amazon.com/dp/B00HWEK39K/ref=as_li_tf_tl?_encoding=UTF8&amp;tag=astoniinc30-20&amp;linkCode=as2&amp;camp=217145&amp;creative=399373&amp;creativeASIN=B00HWEK39K"><font color="#990000" size="+1">Get best price on </font>Samsung Galaxy S4, Black 16GB (Verizon Wireless)</a><img src="http://www.assoc-amazon.com/e/ir?t=astoniinc30-20&amp;l=as2&amp;o=1&amp;a=B00HWEK39K&amp;camp=217145&amp;creative=399373" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;"></b>
+	<b><a href="http://www.amazon.com/dp/B00IZ1XVAC/ref=as_li_tf_tl?_encoding=UTF8&amp;tag=astoniinc30-20&amp;linkCode=as2&amp;camp=217145&amp;creative=399373&amp;creativeASIN=B00IZ1XVAC"><font color="#990000" size="+1">Get best price on </font>Samsung Galaxy S5, Black 16GB (Verizon Wireless)</a><img src="http://www.assoc-amazon.com/e/ir?t=astoniinc30-20&amp;l=as2&amp;o=1&amp;a=B00IZ1XVAC&amp;camp=217145&amp;creative=399373" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;"></b>
 </td>
     <td bgcolor="#ffffff"><img src="/images/invis.gif" width="30" height="1"></td>
 
