geico.com (archived on 2019-06-08)
{
  "alexa_rank": 2873,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 12091,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.16,
  "homepage_snapshot_redirected_domain": "geico.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190331215259id_/https://www.geico.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190331215259id_/http%3A//geico.com",
  "interval": "2019_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "geico.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190608130902id_/https%3A//media.geico.com/legal/privacy_policy.htm",
  "policy_title": "GEICO Privacy Policy",
  "policy_url": "media.geico.com/legal/privacy_policy.htm",
  "sha1": "7a127e3ef4e492ad8f2b862daa16166a117a2921",
  "simhash": 6187873535178560468,
  "simhash_updated": false,
  "site_hostname": "geico.com",
  "site_url": "http://geico.com",
  "smog": 15.07,
  "strict_updated": false,
  "timestamp": "20190608130902",
  "word_count": 1910,
  "year": 2019
}

--- a/g/ge/gei/geico.com.html
+++ b/g/ge/gei/geico.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the geico.com privacy policy that was archived on 2018-08-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180818002501id_/https%3A//media.geico.com/legal/privacy_policy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the geico.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608130902id_/https%3A//media.geico.com/legal/privacy_policy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!--<![endif]--><head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="/common/css/mobile.css" type="text/css">
+		<script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&amp;ns=1&amp;cb=1622504748"></script><script type="text/javascript" src="/ruxitagentjs_ICA2SVfqru_10141180419161112.js" data-dtconfig="rid=RID_1045163616|rpid=1604360108|domain=geico.com|reportUrl=/rb_bf33074xtw|app=ea7c4b59f27d43eb|srms=1,1,,,|uxrgcm=100,25,300,3;100,25,300,3|featureHash=ICA2SVfqru|lastModification=1559929149394|srsr=25000|dtVersion=10141180419161112|tp=500,50,0,1|rdnt=1|uxrgce=1|uxdcw=1500|agentUri=/ruxitagentjs_ICA2SVfqru_10141180419161112.js"></script><link rel="stylesheet" href="/common/css/mobile.css" type="text/css">
 		<title>GEICO Privacy Policy</title>
 		
 		
 		
-	<script type="text/javascript" async="" src="/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&amp;ns=2&amp;cb=1348488819"></script><script type="text/javascript"> 
+	<script type="text/javascript"> 
 	    var geicoDtm = { 
 	        "viewName":"Media:Legal:PrivacyPolicy"
 	    };
@@ -164,7 +164,7 @@
 //<![CDATA[
 (function() {
 var _analytics_scr = document.createElement('script');
-_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&ns=2&cb=1348488819';
+_analytics_scr.type = 'text/javascript'; _analytics_scr.async = true; _analytics_scr.src = '/_Incapsula_Resource?SWJIYLWA=719d34d31c8e3a6e6fffd425f7e032f3&ns=1&cb=1622504748';
 var _analytics_elem = document.getElementsByTagName('script')[0]; _analytics_elem.parentNode.insertBefore(_analytics_scr, _analytics_elem);
 })();
 // ]]>
