herozerogame.com (archived on 2019-06-08)
{
  "alexa_rank": 85374,
  "analysis_subcorpus": true,
  "categories": "games",
  "char_count": 28261,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.51,
  "homepage_snapshot_redirected_domain": "herozerogame.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190419202103id_/https://www.herozerogame.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190419202103id_/http%3A//herozerogame.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "herozerogame.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190608192715id_/https%3A//ap1.herozerogame.com/policy",
  "policy_title": "Hero Zero - Privacy Policy",
  "policy_url": "ap1.herozerogame.com/policy",
  "sha1": "2cc5d4f14ea79ef1431d0d1b0a89995aefb70f87",
  "simhash": 650655857943423060,
  "simhash_updated": false,
  "site_hostname": "herozerogame.com",
  "site_url": "http://herozerogame.com",
  "smog": 13.82,
  "strict_updated": false,
  "timestamp": "20190608192715",
  "word_count": 4473,
  "year": 2019
}

--- a/h/he/her/herozerogame.com.html
+++ b/h/he/her/herozerogame.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the herozerogame.com privacy policy that was archived on 2018-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181212222227id_/https%3A//us3.herozerogame.com/policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the herozerogame.com privacy policy that was archived on 2019-06-08.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190608192715id_/https%3A//ap1.herozerogame.com/policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
-		<link rel="canonical" href="https://www.herozerogame.com/?lang=en_US">
+		<link rel="canonical" href="https://www.herozerogame.com/?lang=en_AP">
 				<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Hero Zero - Privacy Policy</title>
 		<link href="https://hz-static-2.akamaized.net/favicon.ico" rel="shortcut icon">
@@ -14,8 +14,8 @@
 		<meta property="og:type" content="game">
 		<meta property="og:image" content="https://hz-static-landing.akamaized.net/images/app_logo.png">
 		<meta property="og:site_name" content="Hero Zero">
-				<link type="text/css" rel="stylesheet" href="https://hz-static-2.akamaized.net/css/compressed/standalone.css?27b3de5e2cbb34eee195bd506179a462">
-		<script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://hz-static-2.akamaized.net/js/compressed/standalone.js?3b941fb97d03be36700956a0b97fa635"></script>
+				<link type="text/css" rel="stylesheet" href="https://hz-static-2.akamaized.net/css/compressed/standalone.css?7c782b6f40fbc570e73feb063282474a">
+		<script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-MNBGFSL"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" src="https://hz-static-2.akamaized.net/js/compressed/standalone.js?3b941fb97d03be36700956a0b97fa635"></script>
 				<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -24,9 +24,18 @@
 		 
 		  ga('create', 'UA-26036908-1', 'auto');
 		  ga('send', 'pageview');
-		</script>	</head>
+		</script>		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+		j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+		'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+		})(window,document,'script','dataLayer','GTM-MNBGFSL');</script>
+		<!-- End Google Tag Manager -->	</head>
 	<body>
-		<div class="main-container">
+				<!-- Google Tag Manager (noscript) -->
+		<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MNBGFSL"
+		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+		<!-- End Google Tag Manager (noscript) -->		<div class="main-container">
 			<div class="logo"><a href="/">&nbsp;</a></div>
 			<div class="main-content">
 				<div style="position:absolute;width:100px;height:40px;top:-120px;">
