--- a/s/su/sup/supersecret.com.html
+++ b/s/su/sup/supersecret.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the supersecret.com privacy policy that was archived on 2018-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181201094028id_/http%3A//www.supersecret.com/Help/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the supersecret.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609011650id_/http%3A//www.supersecret.com/Help/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>
 	Privacy Policy - SuperSecret
@@ -32,9 +32,14 @@
 </head>
 <body>
     <form name="aspnetForm" method="post" action="./PrivacyPolicy.aspx" id="aspnetForm">
+<div>
 <input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUKLTE0MDE1NTg3MmRkHXU44LBMrsEhgzTRUlEAJvVuujs=">
+</div>
 
-<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="9B0A473B">
+<div>
+
+	<input type="hidden" name="__VIEWSTATEGENERATOR" id="__VIEWSTATEGENERATOR" value="9B0A473B">
+</div>
     <div class="page-container">
         <div class="header">
             <div class="logo">
