gtahotels.com (archived on 2019-06-09)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business",
  "char_count": 6016,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": true,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.23,
  "homepage_snapshot_redirected_domain": "gta-travel.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190320174231id_/http://www.gta-travel.com/en/home",
  "homepage_snapshot_url": "https://web.archive.org/web/20190315070111id_/http%3A//gtahotels.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "gta-travel.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190609061248id_/http%3A//www.gta-travel.com/en/privacy-policy",
  "policy_title": "",
  "policy_url": "gta-travel.com/en/privacy-policy",
  "sha1": "c2149a166a32a32e487a29e6c285a27358b2efa5",
  "simhash": 14702751161509501262,
  "simhash_updated": false,
  "site_hostname": "gtahotels.com",
  "site_url": "http://gtahotels.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190609061248",
  "word_count": 979,
  "year": 2019
}

--- a/g/gt/gta/gtahotels.com.html
+++ b/g/gt/gta/gtahotels.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gtahotels.com privacy policy that was archived on 2018-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181202190233id_/http%3A//www.gta-travel.com/en/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gtahotels.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609061248id_/http%3A//www.gta-travel.com/en/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" class=" js backgroundsize boxshadow fontface" style=""><head>
 		<link rel="shortcut icon" href="/layout/images/favicon.ico">
@@ -188,7 +188,7 @@
 <li><a href="/en/privacy-policy">Privacy Policy</a></li>		
 
 <li><a href="/en/modern-slavery-and-human-trafficking-statement">Modern Slavery and Human Trafficking Statement</a></li>		
-<li><a href="http://group.hotelbeds.com/content/our-culture" target="_blank">Tax Strategy</a></li>
+<li><a href="https://corporate.hotelbeds.com/corporate-governance" target="_blank">Tax Strategy</a></li>
 				</ul>
 				<ul class="width25">
 					
