clonescripts.com (archived on 2019-06-09)
{
  "alexa_rank": 368603,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 1418,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 14.66,
  "homepage_snapshot_redirected_domain": "clonescripts.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190328223104id_/http://www.clonescripts.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190328223104id_/http%3A//clonescripts.com",
  "interval": "2019_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "clonescripts.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190609112043id_/http%3A//www.clonescripts.com/privacy",
  "policy_title": "Privacy - CloneScripts.com",
  "policy_url": "clonescripts.com/privacy",
  "sha1": "953aa6b92a3dbf4ed363473fb0c154cba2f4d21a",
  "simhash": 1197096085085266322,
  "simhash_updated": false,
  "site_hostname": "clonescripts.com",
  "site_url": "http://clonescripts.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20190609112043",
  "word_count": 217,
  "year": 2019
}

--- a/c/cl/clo/clonescripts.com.html
+++ b/c/cl/clo/clonescripts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the clonescripts.com privacy policy that was archived on 2018-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181202193413id_/http%3A//www.clonescripts.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the clonescripts.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609112043id_/http%3A//www.clonescripts.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><!--<![endif]--><head>
         <!-- Basic Page Needs
@@ -84,14 +84,14 @@ $("#txtclonename").autocomplete('pages/autocomplete.php', {
 	 
 		<li><a href="ezinearticles-clone-script/" title="EzineArticles">EzineArticles</a></li>  
 		<li><a href="youtube-clone-script/" title="YouTube">YouTube</a></li>  
-		<li><a href="facebook-clone-script/" title="Facebook">Facebook</a></li>  
 		<li><a href="twitter-clone-script/" title="Twitter">Twitter</a></li>  
+		<li><a href="facebook-clone-script/" title="Facebook">Facebook</a></li>  
 		<li><a href="dropbox-clone-script/" title="Dropbox">Dropbox</a></li>  
 		<li><a href="dailymotion-clone-script/" title="Dailymotion">Dailymotion</a></li>  
-		<li><a href="pinterest-clone-script/" title="Pinterest">Pinterest</a></li>  
 		<li><a href="olx-clone-script/" title="OLX">OLX</a></li>  
 		<li><a href="amazon-clone-script/" title="Amazon">Amazon</a></li>  
-		<li><a href="ebay-clone-script/" title="eBay">eBay</a></li>  <li><a href="http://websitesetup.org/create-blog/" target="_blank">How to Make a Blog</a></li>     </ul></div> <div class="panel panel-default">	<div class="panel-heading breadcrumb">		<h4 class="panel-title">Popular Clone Scripts</h4>	</div>	<ul class="panel-list">        <li><a href="script/online-food-ordering-software-just-eat-grubhub-clone/" title="Online Food Ordering Software - Just Eat &amp; Grubhub Clone">Online Food Ordering...</a></li>         <li><a href="script/php-article-directory-script-mapa-articles/" title="PHP Article Directory Script - MaPa Articles">PHP Article Directory...</a></li>         <li><a href="script/press-release-script/" title="Press Release Script">Press Release Script</a></li>         <li><a href="script/clipshare/" title="ClipShare 5.0 - Industry-Leading PHP Video Script">ClipShare 5.0 -...</a></li>         <li><a href="script/blueboxphp/" title="BlueBoxPHP">BlueBoxPHP</a></li>         <li><a href="script/sokial-social-network-script/" title="Sokial social network script">Sokial social network...</a></li>         <li><a href="script/zinearticles/" title="ZineArticles">ZineArticles</a></li>         <li><a href="script/video-share-vod/" title="Video Share VOD">Video Share VOD</a></li>         <li><a href="script/couponphp-retailmenot-clone-script/" title="CouponPHP - Coupon Management Script">CouponPHP - Coupon...</a></li>         <li><a href="script/php-melody-video-sharing-script/" title="PHP Melody - Video Sharing Script">PHP Melody - Video...</a></li>      </ul></div> <div class="panel panel-default">	<div class="panel-heading breadcrumb">		<h4 class="panel-title">Latest Clone Scripts</h4>	</div>	<ul class="panel-list">        <li><a href="script/eq-taxi-solutions-uber-clone-app/" title="EQ Taxi Solutions - Uber Clone App">EQ Taxi Solutions -...</a></li>         <li><a href="script/inout-blockchain-fiatexchanger/" title="Inout Blockchain FiatExchanger - Powerful Cryptocurrency Exchange Script">Inout Blockchain...</a></li>         <li><a href="script/datify-tinder-clone-script/" title="Datify - Tinder Clone Script">Datify - Tinder Clone...</a></li>         <li><a href="script/original-ebay-clone/" title="Original eBay Clone">Original eBay Clone</a></li>         <li><a href="script/monster-script/" title="Monster Script ">Monster Script </a></li>         <li><a href="script/gumtree-clone-script/" title="Gumtree Clone Script">Gumtree Clone Script</a></li>         <li><a href="script/mobile-appstore-script-apkpure-clone-script/" title="Mobile AppStore Script - APKPure Clone Script">Mobile AppStore...</a></li>         <li><a href="script/uber-clone-taxi-booking-app/" title="Uber Clone Taxi Booking App">Uber Clone Taxi...</a></li>         <li><a href="script/ubereats-like-app/" title="UberEats Like App">UberEats Like App</a></li>         <li><a href="script/fiverr-clone-fiverr-script-i-netsolution/" title="Fiverr Clone | Fiverr Script – i-Netsolution">Fiverr Clone | Fiverr...</a></li>      </ul></div>
+		<li><a href="pinterest-clone-script/" title="Pinterest">Pinterest</a></li>  
+		<li><a href="ebay-clone-script/" title="eBay">eBay</a></li>  <li><a href="http://websitesetup.org/create-blog/" target="_blank">How to Make a Blog</a></li>     </ul></div> <div class="panel panel-default">	<div class="panel-heading breadcrumb">		<h4 class="panel-title">Popular Clone Scripts</h4>	</div>	<ul class="panel-list">        <li><a href="script/online-food-ordering-software-just-eat-grubhub-clone/" title="Online Food Ordering Software - Just Eat &amp; Grubhub Clone">Online Food Ordering...</a></li>         <li><a href="script/php-article-directory-script-mapa-articles/" title="PHP Article Directory Script - MaPa Articles">PHP Article Directory...</a></li>         <li><a href="script/press-release-script/" title="Press Release Script">Press Release Script</a></li>         <li><a href="script/clipshare/" title="ClipShare 5.0 - Industry-Leading PHP Video Script">ClipShare 5.0 -...</a></li>         <li><a href="script/blueboxphp/" title="BlueBoxPHP">BlueBoxPHP</a></li>         <li><a href="script/sokial-social-network-script/" title="Sokial social network script">Sokial social network...</a></li>         <li><a href="script/zinearticles/" title="ZineArticles">ZineArticles</a></li>         <li><a href="script/video-share-vod/" title="Video Share VOD">Video Share VOD</a></li>         <li><a href="script/couponphp-retailmenot-clone-script/" title="CouponPHP - Coupon Management Script">CouponPHP - Coupon...</a></li>         <li><a href="script/php-melody-video-sharing-script/" title="PHP Melody - Video Sharing Script">PHP Melody - Video...</a></li>      </ul></div> <div class="panel panel-default">	<div class="panel-heading breadcrumb">		<h4 class="panel-title">Latest Clone Scripts</h4>	</div>	<ul class="panel-list">        <li><a href="script/website-clones-that-will-hail-your-online-business/" title="Website Clones that will hail your online business">Website Clones that...</a></li>         <li><a href="script/eq-taxi-solutions-uber-clone-app/" title="EQ Taxi Solutions - Uber Clone App">EQ Taxi Solutions -...</a></li>         <li><a href="script/inout-blockchain-fiatexchanger/" title="Inout Blockchain FiatExchanger - Powerful Cryptocurrency Exchange Script">Inout Blockchain...</a></li>         <li><a href="script/datify-tinder-clone-script/" title="Datify - Tinder Clone Script">Datify - Tinder Clone...</a></li>         <li><a href="script/original-ebay-clone/" title="Original eBay Clone">Original eBay Clone</a></li>         <li><a href="script/monster-script/" title="Monster Script ">Monster Script </a></li>         <li><a href="script/gumtree-clone-script/" title="Gumtree Clone Script">Gumtree Clone Script</a></li>         <li><a href="script/mobile-appstore-script-apkpure-clone-script/" title="Mobile AppStore Script - APKPure Clone Script">Mobile AppStore...</a></li>         <li><a href="script/uber-clone-taxi-booking-app/" title="Uber Clone Taxi Booking App">Uber Clone Taxi...</a></li>         <li><a href="script/ubereats-like-app/" title="UberEats Like App">UberEats Like App</a></li>      </ul></div>
  <div class="panel panel-default">
  <div class="panel-heading breadcrumb">	
  <h4 class="panel-title">Advertisements</h4></div>
@@ -151,18 +151,18 @@ If you wish to disable cookies, you may do so through your individual browser op
  <div class="panel-heading breadcrumb">		
  	<h4 class="panel-title">Our Sponsors</h4>	
  	</div>	<ul class="panel-list slidebar-add-list">	
- 		 		<div class="ad-img-div"> <a href="https://www.flippyscripts.com/flippy-products/" target="_blank">	
- 			<img src="images/ads/23-flippyscripts.gif" border="0" class="img-ads"></a>
- 			</div> 		<div class="ad-img-div"> <a href="http://themeforest.net/item/alink-customizable-wordpress-theme/15175004?ref=mogotheme" target="_blank">	
+ 		 		<div class="ad-img-div"> <a href="http://themeforest.net/item/alink-customizable-wordpress-theme/15175004?ref=mogotheme" target="_blank">	
  			<img src="images/ads/21-mogotheme.gif" border="0" class="img-ads"></a>
- 			</div> 		<div class="ad-img-div"> <a href="http://couponphp.com/?ref=clonescripts_banner" target="_blank">	
- 			<img src="images/ads/20-couponphp.jpg" border="0" class="img-ads"></a>
  			</div> 		<div class="ad-img-div"> <a href="http://www.php-classifieds.com" target="_blank">	
  			<img src="images/ads/19-php-classifieds.gif" border="0" class="img-ads"></a>
- 			</div> 		<div class="ad-img-div"> <a href="http://www.wopop.com/" target="_blank">	
- 			<img src="images/ads/12-sidebar-wopop.gif" border="0" class="img-ads"></a>
+ 			</div> 		<div class="ad-img-div"> <a href="https://www.flippyscripts.com/flippy-products/" target="_blank">	
+ 			<img src="images/ads/23-flippyscripts.gif" border="0" class="img-ads"></a>
+ 			</div> 		<div class="ad-img-div"> <a href="http://couponphp.com/?ref=clonescripts_banner" target="_blank">	
+ 			<img src="images/ads/20-couponphp.jpg" border="0" class="img-ads"></a>
  			</div> 		<div class="ad-img-div"> <a href="http://secure.hostgator.com/~affiliat/cgi-bin/affiliates/clickthru.cgi?id=domaincamp-clonescripts" target="_blank">	
  			<img src="images/ads/6-hostgator.gif" border="0" class="img-ads"></a>
+ 			</div> 		<div class="ad-img-div"> <a href="http://www.wopop.com/" target="_blank">	
+ 			<img src="images/ads/12-sidebar-wopop.gif" border="0" class="img-ads"></a>
  			</div> 		<div class="ad-img-div"> <a href="http://www.heatsync.com" target="_blank">	
  			<img src="images/ads/11-sidebar-heat-sync.png" border="0" class="img-ads"></a>
  			</div>   
