--- a/i/in/int/internetbrands.com.html
+++ b/i/in/int/internetbrands.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the internetbrands.com privacy policy that was archived on 2018-09-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180928001927id_/http%3A//www.internetbrands.com/privacy/privacy-highlights.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the internetbrands.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609115117id_/http%3A//www.internetbrands.com/privacy/privacy-highlights.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -78,7 +78,7 @@
 					<li><a href="http://www.internetbrands.com/work-with-us/">Work With Us</a></li>
 					<li><a href="http://www.internetbrands.com/contact-us/">Contact Us</a></li>
 				</ul>
-				<p>Copyright © 2014-2018 MH Sub I, LLC dba Internet Brands. All rights reserved.</p>
+				<p>Copyright © <script>document.write(new Date().getFullYear())</script>2020 MH Sub I, LLC dba Internet Brands. All rights reserved. <a href="http://www.internetbrands.com/privacy/privacy-highlights.html">Privacy Policy</a> | <a href="http://www.internetbrands.com/ib/terms" target="_blank">Terms of Use</a> | <a href="http://www.internetbrands.com/privacy/cookie-policy.html" target="_blank">Cookie Policy</a></p>
 			</div>
 		</div>
 	</div>
