chupamobile.com (archived on 2019-06-09)
{
  "alexa_rank": 244359,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 8033,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.32,
  "homepage_snapshot_redirected_domain": "chupamobile.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190402184223id_/https://www.chupamobile.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190402184223id_/http%3A//chupamobile.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "chupamobile.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190609175113id_/http%3A//www.chupamobile.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "chupamobile.com/privacy-policy",
  "sha1": "831c42ef0bac1ce50b92ec863c4217c6ce9cddda",
  "simhash": 6241029444916719122,
  "simhash_updated": false,
  "site_hostname": "chupamobile.com",
  "site_url": "http://chupamobile.com",
  "smog": 13.19,
  "strict_updated": true,
  "timestamp": "20190609175113",
  "word_count": 1290,
  "year": 2019
}

--- a/c/ch/chu/chupamobile.com.html
+++ b/c/ch/chu/chupamobile.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chupamobile.com privacy policy that was archived on 2017-08-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830014217id_/http%3A//www.chupamobile.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chupamobile.com privacy policy that was archived on 2019-06-09.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190609175113id_/http%3A//www.chupamobile.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -223,7 +223,7 @@ if (typeof dailydealTimeCountersCategory == 'undefined') {
                         </tr>
                     </tbody></table>
                 </div>
-                        <input name="form_key" type="hidden" value="Friq8krTveQ96gt0">
+                        <input name="form_key" type="hidden" value="sLExijquJKerLLvd">
             <div class="registered-users form-wrap">
                 <div class="content">
                     <ul class="form-list">
@@ -691,6 +691,9 @@ var SW_MENU_POPUP_WIDTH = 0;
 </p>
 <p>
     We DO NOT store Credit Card information.
+</p>
+<p></p>
+<p>For further informations on the Privacy notice, click here: <a href="https://www.iubenda.com/privacy-policy/42830957" target="_blank">Privacy Policy</a>
 </p>
 <h2>What we do with the information we gather</h2>
 <p>
